--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Notable&display=swap');
 
+/* *{
+    border: 1px solid orange;
+} */
 .complete_game{
     color: white;
+    font-family: 'Notable', sans-serif;
     min-height: 1000px;
     min-width: 725px;
     max-height: 1000px;
-    background-color: black;
+    background-color: rgb(19, 35, 70);
+    
+    
 }
 
 
@@ -12,30 +19,46 @@
 /* divs of main page */
 header {
     text-align: center;
-    font-size: 4vw;
+    font-size: 5vw;
+    padding: 15px;
+   
 }
 
 .titles {
     display: flex;
-    justify-content: space-around;
-    font-size: 2vw;
+    justify-content: center;
+    font-size: 1vw;
 }
 
+h2 {
+    margin: 0px 125px;
+}
+h3 {
+    margin: 0px 125px;
+}
 .gameplay_container{
     display: flex;
+    flex-flow: row;
     justify-content: center;
-    align-items: flex-start;
+    align-items: baseline;
+    
     
 }
 
+.bottom_container {
+    height: 100px;
+    display: flex;
+    justify-content: center;
+}
 .board {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    margin: 30px;
+    margin: 0px 95px;
     height: 170px;
     width: 160px;
     background-color: rgb(47, 97, 99);
+    background-image: url();
 }
 
 .player1_board_squares, .player2_board_squares {
@@ -44,20 +67,25 @@ header {
     justify-content: center;
     height:14px;
     width: 14px;
-    background-color: cadetblue;
+    /* background-color: cadetblue; */
     border: .25px solid white;
+    opacity: 0.5;
 }
 
-.bottom_container {
-    height: 100px;
-    display: flex;
-    justify-content: space-around;
+#player1_board {
+    background-image: url(https://i.imgur.com/dO5S7gMb.jpg);
+}
+
+#player2_board {
+    background-image: url(https://i.imgur.com/Yl3ah0Kb.jpg);
 }
 
 .player1_ships, .player2_ships {
     display: flex;
     flex-flow: column;
-    margin: 12px 2px;
+    margin: 8px 2px;
+    
+    
     
     
    
@@ -85,7 +113,7 @@ header {
 }
 
 .destroyer{
-    height: 16px;
+    height: 15px;
     width: 31px;
 }
 
@@ -94,6 +122,7 @@ header {
     display: flex;
     flex-flow: row;
     justify-content: center;
+    background-color: rgb(41, 45, 59);
     border-radius: 6px;
 }
 
@@ -101,11 +130,15 @@ header {
     height:14px;
     width: 14px;
     border: 1px solid gray;
-    background-color:  gray;
+    background-color:  rgb(202, 196, 196);
+    border-radius: 10px;
+    opacity: 0.2;
 }
 .player2ShipContents {
     height:14px;
     width: 14px;
     border: 1px solid gray;
-    background-color: gray;
+    background-color: rgb(202, 196, 196);
+    border-radius: 10px;
+    opacity: 0.2;
 }
