--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ h3 {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    margin: 0px 95px;
+    margin: 0px 45px;
     height: 170px;
     width: 160px;
     background-color: rgb(47, 97, 99);
@@ -78,6 +78,30 @@ h3 {
     width: 14px;
     border: .25px solid white;
     opacity: 0.5;
+}
+.statsDiv  {
+    background-color: rgb(43, 56, 61);
+    border-radius: 5px;
+    padding: 1px;
+}
+.destroyed_ships  {
+    text-align: center;
+    width: 150px;
+    margin-top: 10px;
+    background-color: rgb(43, 56, 61);
+    border-radius: 5px;
+    opacity: 0.6;
+}
+.stats{
+    /* display: flex;
+    flex-direction: column; */
+    border-top: 1px solid rgb(109, 16, 112);
+    color: rgb(174, 179, 102);
+    margin: 0;
+    text-align: center;
+    width: auto;
+    height: 30px;
+    
 }
 
 
